src/objects/Call_Monitoring__c.object
<CustomObject>
    <fields>
        <fullName>Allow_customer_to_present_concerns__c</fullName>
        <label>Allow customer to present concerns</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Built_Rapport__c</fullName>
        <label>Built Rapport</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Monitoring</relationshipLabel>
        <relationshipName>Call_Monitoring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_advised_what_will_happen_next__c</fullName>
        <label>CM advised what will happen next</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Object_ID__c</fullName>
        <label>Call Object ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <label>Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_made_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call made by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Monitoring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_s_clear_positive_confident__c</fullName>
        <label>Communication&apos;s clear,positive,confident</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <label>Completed By</label>
        <picklist>
            <picklistValues>
                <fullName>David Powell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramsay Pontin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumeet Bhindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan Goldsworthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Katie Elms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demonstrate_active_listening__c</fullName>
        <label>Demonstrate active listening</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_of_Month__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End of Month</label>
        <referenceTo>End_of_Month__c</referenceTo>
        <relationshipLabel>Call Monitoring</relationshipLabel>
        <relationshipName>Call_Monitoring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gave_correct_answers_and_infomations__c</fullName>
        <label>Gave correct answers and infomations</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mirrors_clients_talking_behaviour__c</fullName>
        <label>Mirrors clients talking behaviour</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TL_Notes__c</fullName>
        <label>TL Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Active_Days__c</fullName>
        <formula>Business_Name__r.Active_Days__c</formula>
        <label>Total Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Call_Time__c</fullName>
        <label>Total Call Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Call Monitoring</label>
    <nameField>
        <displayFormat>Call Monitoring #{00000}</displayFormat>
        <label>Call Monitoring</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Monitoring</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>